Rework Api and implement get_data
