# access_node/controllers/nest_controller.py
@@ -1,73 +1,94 @@
 import connexion
 import six
 
-from access_node.models.attribute import Attribute  # noqa: E501
-from access_node.models.data import Data  # noqa: E501
 from access_node.models.error import Error  # noqa: E501
+from access_node.models.info import Info  # noqa: E501
+from access_node.models.multimeter import Multimeter  # noqa: E501
+from access_node.models.multimeter_info import MultimeterInfo  # noqa: E501
 from access_node.models.spikes import Spikes  # noqa: E501
 from access_node import util
 
-# My imports
-import json
-import requests
 
-
-def get_attributes():  # noqa: E501
-    """Retrieves the details of per-neuron attributes.
+def get_current_simulation_time():  # noqa: E501
+    """Retrieves the current simulation time.
 
      # noqa: E501
 
 
-    :rtype: List[Attribute]
+    :rtype: float
     """
-    with open('access_node//distribution_nodes.json', 'r') as f:
-        dist_nodes = json.load(f)
-    information_node = dist_nodes['addresses'][0]
-
-    response = requests.get(information_node+'/attributes').json()
-    return response
+    return 'do some magic!'
 
 
-def get_data(attribute, simulation_steps=None, neuron_ids=None):  # noqa: E501
-    """Retrieves the per-neuron attributes for the given attribute name, simulation steps (optional) and neuron IDs (optional).
+def get_data(multimeter, attribute, _from=None, to=None, neuron_ids=None):  # noqa: E501
+    """Retrieves the per-neuron attributes for the given multimeter name, attribute name, duration (from - to) (optional) and neuron IDs (optional).
 
      # noqa: E501
 
+    :param multimeter: Multimeter name.
+    :type multimeter: str
     :param attribute: Attribute name.
     :type attribute: str
-    :param simulation_steps: Simulation steps (leave empty for all steps).
-    :type simulation_steps: List[]
+    :param _from: First timestep to retreive (leave empty for first step possible).
+    :type _from: float
+    :param to: Last timestep to retreive (leave empty for last step possible).
+    :type to: float
     :param neuron_ids: Neuron IDs (leave empty for all neurons).
     :type neuron_ids: List[]
 
-    :rtype: Data
+    :rtype: Multimeter
     """
-    # Replace this with request to information_node
     with open('access_node//distribution_nodes.json', 'r') as f:
         dist_nodes = json.load(f)
     addresses = dist_nodes['addresses']
-
-    if simulation_steps != None:
-        num_ts = len(simulation_steps)
-        first_ts = simulation_steps[0]
-    else:
-        num_ts = get_simulation_step_count()
-        first_ts = get_timestep()
 
     if neuron_ids != None:
         ids = neuron_ids
     else:
         ids = get_neuron_ids()
 
-    data = Data(first_ts, num_ts, ids,
-                [[None]*num_ts for x in range(len(ids))])
+    # TODO Query this
+    interval = 0.1
+
+    num_values_per_neuron = (to-_from)/interval
+
+
+    mult_response = Multimeter(multimeter)
+    mult_response._from = _from
+    mult_response.to = to
+    mult_response.neuron_ids = ids
+    mult_response.interval = interval
+    mult_response.values = [[None]*num_values_per_neuron for x in range(len(ids))]
+
     for address in addresses:
-        response = requests.get(address+'/data', params={
-                                "attribute": attribute, "simulation_steps": simulation_steps, "neuron_ids": neuron_ids}).json()
+        response = requests.get(address+'/data', params={ "multimeter": multimeter,
+                                "attribute": attribute, "from": _from, "to": to, "neuron_ids": neuron_ids}).json()
         for x in range(len(response['neuron_ids'])):
-            data.values[data.neuron_ids.index(
-                response['neuron_ids'][x])] = response['data'][x]
-    return data
+            mult_response.values[mult_response.neuron_ids.index(
+                response['neuron_ids'][x])] = response['values'][x]
+    return mult_response
+
+
+def get_info():  # noqa: E501
+    """Retrieves general simulation information.
+
+     # noqa: E501
+
+
+    :rtype: Info
+    """
+    return 'do some magic!'
+
+
+def get_multimeters():  # noqa: E501
+    """Retrieves the details of all multimeters.
+
+     # noqa: E501
+
+
+    :rtype: List[MultimeterInfo]
+    """
+    return 'do some magic!'
 
 
 def get_neuron_ids():  # noqa: E501
@@ -78,28 +99,7 @@ def get_neuron_ids():  # noqa: E501
 
     :rtype: List[float]
     """
-    with open('access_node//distribution_nodes.json', 'r') as f:
-        dist_nodes = json.load(f)
-    information_node = dist_nodes['addresses'][0]
-
-    response = requests.get(information_node+'/neuron_ids').json()
-    return response
-
-
-def get_simulation_step_count():  # noqa: E501
-    """Retrieves the number of simulation steps.
-
-     # noqa: E501
-
-
-    :rtype: float
-    """
-    with open('access_node//distribution_nodes.json', 'r') as f:
-        dist_nodes = json.load(f)
-    information_node = dist_nodes['addresses'][0]
-
-    response = requests.get(information_node+'/simulation_step_count').json()
-    return response
+    return 'do some magic!'
 
 
 def get_spikes(simulation_steps=None, neuron_ids=None):  # noqa: E501
@@ -114,34 +114,4 @@ def get_spikes(simulation_steps=None, neuron_ids=None):  # noqa: E501
 
     :rtype: Spikes
     """
-    # Replace this with request to information_node
-    with open('access_node//distribution_nodes.json', 'r') as f:
-        dist_nodes = json.load(f)
-    addresses = dist_nodes['addresses']
-
-    spikes = Spikes([], [])
-    for address in addresses:
-        response = requests.get(
-            address+'/spikes', params={"simulation_steps": simulation_steps, "neuron_ids": neuron_ids}).json()
-        for x in range(len(response['simulation_steps'])):
-            spikes.simulation_steps.append(response['simulation_steps'][x])
-            spikes.neuron_ids.append(response['neuron_ids'][x])
-
-    # Sort this?
-    return spikes
-
-
-def get_timestep():  # noqa: E501
-    """Retrieves the time between two simulation steps.
-
-     # noqa: E501
-
-
-    :rtype: float
-    """
-    with open('access_node//distribution_nodes.json', 'r') as f:
-        dist_nodes = json.load(f)
-    information_node = dist_nodes['addresses'][0]
-
-    response = requests.get(information_node+'/timestep').json()
-    return response
+    return 'do some magic!'
